tests/fixtures/invalid/str_mod_none.py
# Cannot modulo Str and None
x: str = "hello" % None
